- added category layout for client. - added getCategoryByID. - fix layout spacing.

--- a/client/src/app/account/components/addProduct/styles.module.scss
+++ b/client/src/app/account/components/addProduct/styles.module.scss
@@ -39,3 +39,11 @@
         }
     }
 }
+
+.prolistContainer {
+    :global {
+        .ant-pro-form-list-action {
+            margin-block-end: toRem(12) !important;
+        }
+    }
+}
